--- a/savekerala/mainapp/templates/mainapp/camp/camp_detail.html
+++ b/savekerala/mainapp/templates/mainapp/camp/camp_detail.html
@@ -1,8 +1,26 @@
-{% extends 'mainapp/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+  <head>
 
-        <!-- Navigation -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Tom Victor">
+
+    <title>#SaveKerala.xyz</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://blackrockdigital.github.io/startbootstrap-shop-homepage/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="https://blackrockdigital.github.io/startbootstrap-shop-homepage/css/shop-homepage.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">savekerala.xyz</a>
@@ -39,8 +57,8 @@
 
           <h1 class="my-4">Camp List</h1>
           <div class="list-group">
-              {% for cam in camps %}
-              <a href="#" class="list-group-item">{{ cam.title }}</a>
+              {% for dis in dists %}
+              <a href="#" class="list-group-item">{{ dis.title }}</a>
               {% endfor %}
           </div>
 
@@ -185,4 +203,19 @@
 
     </div>
     <!-- /.container -->
-{% endblock %}
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; savekerala.xyz</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
+</html>
