--- a/savekerala/mainapp/templates/mainapp/base.html
+++ b/savekerala/mainapp/templates/mainapp/base.html
@@ -24,13 +24,13 @@
 
 {% endblock %}
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; savekerala.xyz</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+{#    <!-- Footer -->#}
+{#    <footer class="py-5 bg-dark">#}
+{#      <div class="container">#}
+{#        <p class="m-0 text-center text-white">Copyright &copy; savekerala.xyz</p>#}
+{#      </div>#}
+{#      <!-- /.container -->#}
+{#    </footer>#}
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
