--- a/savekerala/mainapp/templates/mainapp/camplist2.html
+++ b/savekerala/mainapp/templates/mainapp/camplist2.html
@@ -33,53 +33,38 @@
 
     <!-- Page Content -->
     <div class="container">
+    <h1 class="my-4">Locality List</h1>
 
         <div class="row">
 
             <div class="col-lg-3">
 
-                <h1 class="my-4">Locality List</h1>
+
+
+                <form method="GET" action="/camps/search/">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Camp Stock update</label>
+                        <input type="" class="form-control" id="search" name="q" aria-describedby="emailHelp"
+                               placeholder="Ernakulam">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                </form>
+            <br>
+
                 <div class="list-group">
-                    {% for cam in locality %}
-                        <a href="#" class="list-group-item">{{ cam.title }} | {{ cam.district.title }}</a>
+                    {% for di in dists %}
+                        <a href="/camps/district/?q={{ di.id }}" class="list-group-item">{{ di.title }}</a>
                     {% endfor %}
                 </div>
+
+            <br>
 
             </div>
             <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
 
-                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <!-- <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide"> -->
-                        </div>
-                        <div class="carousel-item">
-                            <!-- <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide"> -->
-                        </div>
-                        <div class="carousel-item">
-                            <!-- <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide"> -->
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-
                 <div class="row">
-
-
                     {% for camp in camps %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
@@ -88,13 +73,14 @@
                                     <h4 class="card-title">
                                         <a href="#">{{ camp.title }}</a>
                                     </h4>
-                                    <h5>$24.99</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                                        numquam aspernatur!</p>
+                                    <h5>{{ camp.locality.district }}</h5>
+                                    <p class="card-text">{{ camp.location }}</p>
+                                     <p class="card-text">{{ camp.contact_name|capfirst }} : {{ camp.contact_no }}</p>
+
                                 </div>
-                                <div class="card-footer">
-                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                                </div>
+{#                                <div class="card-footer">#}
+{#                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>#}
+{#                                </div>#}
                             </div>
                         </div>
                     {% endfor %}
