updated the template

--- a/savekerala/mainapp/templates/mainapp/camp_detail.html
+++ b/savekerala/mainapp/templates/mainapp/camp_detail.html
@@ -5,14 +5,13 @@
 
     <!-- Page Content -->
     <div class="container">
-    <h1 class="my-4">{{ thisCamp.title|upper }}</h1>
-    <p>District : {{ thisCamp.locality.district|capfirst }} |
-    Locality : {{ thisCamp.locality }} |
-        Contact Name : {{ thisCamp.contact_name|capfirst }} : {{ thisCamp.contact_no }}
-    </p>
+        <h1 class="my-4">{{ thisCamp.title|upper }}</h1>
+        <p>District : {{ thisCamp.locality.district|capfirst }} |
+            Locality : {{ thisCamp.locality }} |
+            Contact Name : {{ thisCamp.contact_name|capfirst }} : {{ thisCamp.contact_no }}
+        </p>
 
         <div class="row">
-
 
 
             <div class="col-lg-9">
@@ -20,21 +19,37 @@
                 <div class="row">
                     {% for sto in stock %}
                         <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <!-- <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a> -->
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ sto.title }}</a>
-                                    </h4>
-                                    <h5>{{ sto.item_type }}</h5>
-{#                                    <p class="card-text">{{ camp.location }}</p>#}
-{#                                     <p class="card-text">{{ camp.contact_name|capfirst }} : {{ camp.contact_no }}</p>#}
+                            {% if sto.stock_status == 1 %}
+                                <div class="card border-success mb-3" style="max-width: 18rem;">
+                                    <div class="card-header">{{ sto.item_type.title|upper }}</div>
+                                    <div class="card-body text-success">
+                                        <h5 class="card-title">{{ sto.title|upper }}</h5>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">{{ sto.quantity }} - {{ sto.unit }}</li>
+                                            <li class="list-group-item">Laste updated
+                                                : {{ sto.last_updated|timesince }}</li>
+                                            {#                                        <li class="list-group-item">Timestamp : {{ sto.timestamp|timesince }}</li>#}
+                                        </ul>
 
+                                    </div>
                                 </div>
-{#                                <div class="card-footer">#}
-{#                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>#}
-{#                                </div>#}
-                            </div>
+                            {% elif sto.stock_status == 0 %}
+                                <div class="card border-danger mb-3" style="max-width: 18rem;">
+                                    <div class="card-header">{{ sto.item_type.title|upper }}</div>
+                                    <div class="card-body text-danger">
+                                        <h5 class="card-title">{{ sto.title|upper }}</h5>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">{{ sto.quantity }} - {{ sto.unit }}</li>
+                                            <li class="list-group-item">Laste updated
+                                                : {{ sto.last_updated|timesince }}</li>
+                                            {#                                        <li class="list-group-item">Timestamp : {{ sto.timestamp|timesince }}</li>#}
+                                        </ul>
+
+                                    </div>
+                                </div>
+                            {% endif %}
+
+
                         </div>
                     {% endfor %}
 
@@ -45,7 +60,7 @@
             </div>
             <!-- /.col-lg-9 -->
 
-         <div class="col-lg-3">
+            <div class="col-lg-3">
 
                 <form method="GET" action="/camps/search/">
                     <div class="form-group">
@@ -55,7 +70,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 </form>
-            <br>
+                <br>
 
                 <div class="list-group">
                     {% for di in dists %}
@@ -63,7 +78,7 @@
                     {% endfor %}
                 </div>
 
-            <br>
+                <br>
 
             </div>
             <!-- /.col-lg-3 -->
