--- a/savekerala/mainapp/templates/mainapp/camplist2.html
+++ b/savekerala/mainapp/templates/mainapp/camplist2.html
@@ -4,32 +4,55 @@
 
     <!-- Page Content -->
     <div class="container">
-    <h1 class="my-4">Locality List</h1>
+        <h1 class="my-4">Locality List</h1>
 
         <div class="row">
+
 
             <div class="col-lg-3">
 
                 <form method="GET" action="/camps/search/">
+
+
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Camp Stock update</label>
+                        <label for="exampleInputEmail1">Search Camps</label>
                         <input type="" class="form-control" id="search" name="q" aria-describedby="emailHelp"
-                               placeholder="Ernakulam">
+                               placeholder="Akanad Church Hall">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 </form>
-            <br>
+                <br>
+                <b style="text-align: center">[ or ]</b>
+                <br>
+                <br>
+                <form method="GET" action="/camps/district/">
 
-                <div class="list-group">
-                    {% for di in dists %}
-                        <a href="/camps/district/?q={{ di.id }}" class="list-group-item">{{ di.title }}</a>
-                    {% endfor %}
-                </div>
 
-            <br>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Choose district</label>
+                        <select class="form-control" id="select_dis" name="q">
+                            {% for di in dists %}
+                                <option>{{ di.title }}</option>
+                            {% endfor %}
+
+
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                </form>
+
+
+                {#                <div class="list-group">#}
+                {#                    {% for di in dists %}#}
+                {#                        <a href="/camps/district/?q={{ di.id }}" class="list-group-item">{{ di.title }}</a>#}
+                {#                    {% endfor %}#}
+                {#                </div>#}
+
+                <br>
 
             </div>
             <!-- /.col-lg-3 -->
+
 
             <div class="col-lg-9">
 
@@ -44,12 +67,12 @@
                                     </h4>
                                     <h5>{{ camp.locality.district }}</h5>
                                     <p class="card-text">{{ camp.location }}</p>
-                                     <p class="card-text">{{ camp.contact_name|capfirst }} : {{ camp.contact_no }}</p>
+                                    <p class="card-text">{{ camp.contact_name|capfirst }} : {{ camp.contact_no }}</p>
 
                                 </div>
-{#                                <div class="card-footer">#}
-{#                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>#}
-{#                                </div>#}
+                                {#                                <div class="card-footer">#}
+                                {#                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>#}
+                                {#                                </div>#}
                             </div>
                         </div>
                     {% endfor %}
