--- a/savekerala/mainapp/templates/mainapp/base.html
+++ b/savekerala/mainapp/templates/mainapp/base.html
@@ -61,8 +61,8 @@
 {#    </footer>#}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://blackrockdigital.github.io/startbootstrap-shop-homepage/vendor/jquery/jquery.min.js"></script>
+    <script src="https://blackrockdigital.github.io/startbootstrap-shop-homepage/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
