--- a/savekerala/mainapp/templates/mainapp/camp_detail.html
+++ b/savekerala/mainapp/templates/mainapp/camp_detail.html
@@ -62,23 +62,44 @@
             </div>
             <!-- /.col-lg-9 -->
 
-            <div class="col-lg-3">
+           <div class="col-lg-3">
 
                 <form method="GET" action="/camps/search/">
+
+
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Camp Stock update</label>
+                        <label for="exampleInputEmail1">Search Camps</label>
                         <input type="" class="form-control" id="search" name="q" aria-describedby="emailHelp"
-                               placeholder="Ernakulam">
+                               placeholder="Akanad Church Hall">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 </form>
                 <br>
+                <b style="text-align: center">[ or ]</b>
+                <br>
+                <br>
+                <form method="GET" action="/camps/district/">
 
-                <div class="list-group">
-                    {% for di in dists %}
-                        <a href="/camps/district/?q={{ di.title }}" class="list-group-item">{{ di.title }}</a>
-                    {% endfor %}
-                </div>
+
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Choose district</label>
+                        <select class="form-control" id="select_dis" name="q">
+                            {% for di in dists %}
+                                <option>{{ di.title }}</option>
+                            {% endfor %}
+
+
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                </form>
+
+
+                {#                <div class="list-group">#}
+                {#                    {% for di in dists %}#}
+                {#                        <a href="/camps/district/?q={{ di.id }}" class="list-group-item">{{ di.title }}</a>#}
+                {#                    {% endfor %}#}
+                {#                </div>#}
 
                 <br>
 
