--- a/savekerala/mainapp/templates/mainapp/base.html
+++ b/savekerala/mainapp/templates/mainapp/base.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="http://savekerala.xyz/#/dashboard">Live Updates</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="/about/">About</a>
                     </li>
                 </ul>
             </div>
